--- a/front/pattern/custom.css
+++ b/front/pattern/custom.css
@@ -31,3 +31,46 @@ input {
 .ant-menu {
     font-size: 12px !important;
 }
+
+/* View-form */
+.view-form {
+    font-size: 13px;
+    padding: 24px;
+    background: #fbfbfb;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+    width: 100%;
+}
+
+.view-form-content-elem {
+    margin: 5px 0px 5px 0px;
+    height: 24px;
+    display: flex;
+    direction: row;
+    height: auto;
+}
+
+.view-form-content-elem-header {
+    padding-top: 5px;
+    width: 230px;
+    text-align: right;
+}
+
+.view-form-content-elem-content {
+    padding-top: 5px;
+    color: #262626;
+    padding-left: 10px;
+    width: 100%;
+    height: auto;
+}
+
+.view-form-content-elem-func {
+    width: 28px;
+}
+
+.view-form-function {
+    margin-top: 20px;
+    display: flex;
+    direction: row;
+    justify-content: space-between;
+}
