--- a/front/pattern/custom.css
+++ b/front/pattern/custom.css
@@ -1,5 +1,9 @@
 /* all style custom */
 
+/* body {
+    background: url(../../static/img/dark-blue-pixelline.png) !important;
+} */
+
 /* table {
     font-size: 13px;
 }
