--- a/front/pattern/custom.css
+++ b/front/pattern/custom.css
@@ -4,6 +4,17 @@
     background: url(../../static/img/dark-blue-pixelline.png) !important;
 } */
 
+.avatar-uploader > .ant-upload > img {
+    width: 300px;
+    height: 300px;
+}
+
+.ant-avatar-img {
+    width: 300px;
+    height: 300px;
+    background-size: cover;
+}
+
 /* table {
     font-size: 13px;
 }
@@ -86,13 +97,4 @@ input {
     float: right;
 }
 
-.avatar-uploader > .ant-upload > img {
-    width: 200px;
-    height: 200px;
-}
-
-.ant-avatar-img {
-    width: 200px;
-    height: 200px;
-    background-size: cover;
-} */
+ */
