--- a/front/pattern/custom.css
+++ b/front/pattern/custom.css
@@ -19,6 +19,8 @@
     width: 420px;
     height: 300px;
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 /* table {
