--- a/front/pattern/custom.css
+++ b/front/pattern/custom.css
@@ -103,3 +103,11 @@ input {
 .ant-table-row {
     cursor: pointer;
 }
+
+.list-goods-avatar {
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
